# Value-Proposition-Canvas

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  seed_admin.py  test.db  vpc_dev.db  vpc_dev.db-shm  vpc_dev.db-wal
admin/: admin_api.py  admin_app.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_auth_improvements.py  003_share_links.py  004_byok_api_key.py
app/: __init__.py  auth.py  coaching.py  database.py  document_generator.py  encryption.py  main.py  models.py  pdf_generator.py  sanitization.py  schemas.py  security.py  validation.py
app/routes/: admin_routes.py  auth_routes.py  byok_routes.py  canvas_routes.py  share_routes.py
tasks/: lessons.md
tests/: conftest.py  test_admin.py  test_auth.py  test_byok.py  test_canvas_api.py  test_canvas_import_export.py  test_nudges.py  test_pdf_csv_export.py  test_security.py  test_share_links.py  test_ux_endpoints.py  test_validation.py
tests/e2e/: conftest.py  test_json_import_export_e2e.py  test_nudges_e2e.py  test_pdf_csv_export_e2e.py  test_share_links_e2e.py
ui/: admin_api.py  admin_ui.py  auth_ui.py  canvas_api.py  streamlit_app.py
ui/assets/: admin.css  style.css
